[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/ScoreBoard/NetworkScoreBoard.gd" type="Script" id=1]
[ext_resource path="res://scenes/MainMenu/HeaderSection.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/BlackOpsOne-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/Widgets/LeftRightWidget.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Widgets/NonBlockingPopup.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]

size = 40
outline_size = 0
outline_color = Color( 1, 1, 1, 1 )
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 24
outline_size = 0
outline_color = Color( 1, 1, 1, 1 )
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=3]

size = 40
outline_size = 0
outline_color = Color( 1, 1, 1, 1 )
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=4]

size = 24
outline_size = 0
outline_color = Color( 1, 1, 1, 1 )
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="NetworkScoreBoard" type="Control"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Script" ]

[node name="Background" type="ColorRect" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 540.0
margin_bottom = 960.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 1 )

[node name="HeaderSection" parent="." instance=ExtResource( 2 )]

[node name="ColorRect3" type="ColorRect" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 100.0
margin_right = 530.0
margin_bottom = 203.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.576471, 0.513726, 0.231373, 1 )

[node name="Label" type="Label" parent="ColorRect3"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = -4.0
margin_right = 520.0
margin_bottom = 46.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "The Score Board"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts", "custom_fonts/font" ]

[node name="Label3" type="Label" parent="ColorRect3"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 40.0
margin_right = 520.0
margin_bottom = 103.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "Still calculating the results. 
Please be patient..."
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts", "custom_fonts/font" ]

[node name="ContainerSection" type="ColorRect" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 220.0
margin_right = 530.0
margin_bottom = 889.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.576471, 0.513726, 0.231373, 1 )
_sections_unfolded = [ "Script" ]

[node name="Label" type="Label" parent="ContainerSection"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 4.0
margin_right = 196.0
margin_bottom = 54.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
text = "Viewing: "
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts", "custom_fonts/font" ]

[node name="ViewLeftRightWidget" parent="ContainerSection" instance=ExtResource( 4 )]
margin_left = 198.0
margin_top = 12.0
margin_right = 514.0
margin_bottom = 50.0

[node name="ScrollContainer" type="ScrollContainer" parent="ContainerSection"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 59.0
margin_right = 520.0
margin_bottom = 497.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
scroll_horizontal_enabled = false
scroll_horizontal = 0
scroll_vertical_enabled = true
scroll_vertical = 0
scroll_deadzone = 0
_sections_unfolded = [ "Rect", "Scroll" ]

[node name="TheGrid" type="VBoxContainer" parent="ContainerSection/ScrollContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 10
alignment = 0
_sections_unfolded = [ "Rect", "custom_constants" ]

[node name="MainMenuBtn" type="Button" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 3.0
margin_top = 896.0
margin_right = 223.0
margin_bottom = 956.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "< Main Menu"
flat = false
align = 1
_sections_unfolded = [ "Script", "custom_fonts", "custom_fonts/font" ]

[node name="ConnectToHostPopup" parent="." instance=ExtResource( 5 )]
visible = false

[connection signal="LRWidChanged" from="ContainerSection/ViewLeftRightWidget" to="." method="_on_ViewLeftRightWidget_LRWidChanged" flags=3]
[connection signal="pressed" from="MainMenuBtn" to="." method="_on_BackToSetup_pressed" flags=3]
